# otter

./: CLAUDE.md  LICENSE  README.md  RFC.md  pyproject.toml
.claude/agents/: commit.md
.github/workflows/: release-npm.yml
npm/: .releaserc.json  package.json
otter/: __init__.py  cli.py  config.py  session.py  tui.py
otter/ai/: __init__.py  client.py  prompts.py
otter/analyze/: __init__.py  profiler.py
otter/connect/: __init__.py  db.py  file.py
otter/export/: __init__.py  pickle.py
otter/train/: __init__.py  pipeline.py
